--- a/src/Launcher/wwwroot/Launcher/viewmodels/LauncherTemplate.html
+++ b/src/Launcher/wwwroot/Launcher/viewmodels/LauncherTemplate.html
@@ -34,7 +34,7 @@
 
     <link rel="import" href="/sys/imported-template/imported-template.html" />
     <link rel="import" href="/sys/dom-bind-notifier/dom-bind-notifier.html" />
-    <link rel="import" href="/sys/juicy-redirect/juicy-redirect.html" />
+    <link rel="import" href="/sys/puppet-redirect/puppet-redirect.html" />
 
     <!-- Style sheets -->
     <link rel="import" href="/sys/bootstrap.html" />
@@ -55,7 +55,7 @@
                     <i class="glyphicon glyphicon-search"></i>
                 </a>
                 <launcher-search-input placeholder="Search" value="{{model.searchBar.query$}}" close-action="{{model.searchBar.close$}}" submit-action="{{model.searchBar.submit$}}"></launcher-search-input>
-                <link is="juicy-redirect" history url="{{model.searchBar.searchEngineResultPageUrl$}}" />
+                <link is="puppet-redirect" history url="{{model.searchBar.searchEngineResultPageUrl$}}" />
                 <template is="dom-if" if="{{model.searchBar.previewVisible}}">
                     <div class="preview">
                         <starcounter-include class="preview" partial="{{model.searchBar.preview}}"></starcounter-include>
