--- a/src/Launcher/wwwroot/Launcher/elements/tu-layout/tu-layout-multiview.html
+++ b/src/Launcher/wwwroot/Launcher/elements/tu-layout/tu-layout-multiview.html
@@ -11,7 +11,7 @@
     </template>
   </template>
   <script>
-    var TuApp = Polymer({
+    Polymer({
       is: "tu-layout-multiview",
       properties: {
         data: {
