Add temporary workaround for user section
https://github.com/StarcounterPrefabs/Launcher/issues/228

--- a/src/Launcher/wwwroot/Launcher/viewmodels/LauncherTemplate.html
+++ b/src/Launcher/wwwroot/Launcher/viewmodels/LauncherTemplate.html
@@ -61,7 +61,10 @@
                     </div>
                 </template>
             </div>
-            <template is="imported-template" content$="{{model.user.Html}}" model="{{model.user}}"></template>
+            <div style="max-width: 300px; overflow: hidden;">
+                <starcounter-include partial="{{model.user}}"></starcounter-include>
+            </div>
+            <!--<template is="imported-template" content$="{{model.user.Html}}" model="{{model.user}}"></template>-->
 
             <!-- TODO: migrate getModel boolean trigger -->
             <template is="dom-if" restamp if="{{!model.layoutModified$}}">
