--- a/src/Launcher/wwwroot/Launcher/elements/tu-layout/tu-layout-multiview.html
+++ b/src/Launcher/wwwroot/Launcher/elements/tu-layout/tu-layout-multiview.html
@@ -5,7 +5,7 @@
   </style>
   <template>
     <template is="dom-repeat" items="{{apps}}" as="item">
-      <div class="{{_class(item.active)}}">
+      <div class$="view {{_class(item.active)}}">
         <template is="imported-template" model="{{item.data.Current}}" content$="{{item.data.Current.Html}}"></template>
       </div>
     </template>
@@ -24,6 +24,12 @@
           type:Array,
           value: [],
           notify: true,
+        },
+        panelWidth: {
+          type: Number,
+          value: 200,
+          notify: true,
+          observer: 'panelWidthChanged'
         }
       },
       observers:[
@@ -32,6 +38,17 @@
       ready: function() {
       },
       attached: function() {
+      },
+      panelWidthChanged: function() {
+        var views = Polymer.dom(this.root).querySelectorAll('.view');
+        for (var i = 0; i < views.length; i++) {
+          var view = views[i];
+          var childs = view.children;
+          for (var j= 0; j < childs.length; j++) {
+            if (childs[j].__isPolymerInstance__)
+              childs[j].set('panelWidth', this.panelWidth);
+          }
+        }
       },
       _activeApp : '',
       subdataChanged: function(ev) {
